discussion/kv_engine/175891/175891_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Use proper singleton for ScamShaFallbackSalt

Change-Id: Iba799518898a6387885c43e621ea85c53da59324

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-06-08 13:29:04.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-08 13:33:48.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7758/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7758/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46684/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/cbsasl/user.cc(175): error C2059: syntax error: "{" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46684/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17996/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/user.cc:147:9: error: use of undeclared identifier "fallback" [clang-diagnostic-error]
        fallback.swap(decoded);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/user.cc:151:17: error: use of undeclared identifier "fallback" [clang-diagnostic-error]
        return *fallback.rlock();
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/user.cc:156:5: error: use of undeclared identifier "folly" [clang-diagnostic-error]
    folly::Synchronized<std::string> fallback;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/user.cc:175:46: error: expected class member or base class name [clang-diagnostic-error]
ScamShaFallbackSalt::ScamShaFallbackSalt() : {
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17996/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/cbsasl/user.cc:147:9:
error: use of undeclared identifier "fallback" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17996/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39236/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/cbsasl/user.cc:156:5:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39236/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7654/ : FAILURE

Compile error at [2022-06-08T13:30:14.679Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/cbsasl/user.cc:156:5:
error: use of undeclared identifier "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7654/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19032/ : FAILURE

Compile error at [2022-06-08T13:30:34.488Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/cbsasl/user.cc:175:46:
error: expected class member or base class name
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19032/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20836/ : FAILURE

Compile error at [2022-06-08T13:31:38.376Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/cbsasl/user.cc:175:46:
error: expected class member or base class name
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20836/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28227/ : FAILURE

Compile error at [2022-06-08T13:32:19.052Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/cbsasl/user.cc:175:46:
error: expected class member or base class name
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28227/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20183/ : FAILURE

Compile error at [2022-06-08T13:31:19.191Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/cbsasl/user.cc:175:46:
error: expected identifier before ?{? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20183/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19838/ : FAILURE

Compile error at [2022-06-08T13:31:12.939Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/cbsasl/user.cc:175:46:
error: expected identifier before ?{? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19838/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17055/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
